fix(vertx): Java8 compatibility
Signed-off-by: Marc Nuri <marc@marcnuri.com>